# spatial_graph

./: .cruft.json  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: black.yaml  ci.yaml  ci.yml  docs.yaml  mypy.yaml  tests.yaml
docs/: index.md
examples/: basic_usage.py  query_nearest_vispy.py
reference/spatial_graph/: index.html
reference/spatial_graph/dtypes/: index.html
reference/spatial_graph/graph/: index.html
reference/spatial_graph/graph/graph/: index.html
reference/spatial_graph/rtree/: index.html
reference/spatial_graph/rtree/line_rtree/: index.html
reference/spatial_graph/rtree/point_rtree/: index.html
reference/spatial_graph/rtree/rtree/: index.html
reference/spatial_graph/spatial_graph/: index.html
search/: search_index.json
spatial_graph/: __init__.py  dtypes.py  edge_rtree.py  graph.py  graphlite_wrapper.pyx  line_rtree.py  node_rtree.py  point_rtree.py  rtree.py  rtree_decl.pxd  rtree_wrapper.pyx  spatial_graph.py
spatial_graph/graph/: graph.py  src_wrapper.pyx  wrapper_template.pyx
spatial_graph/graph/src/: graph_lite.h
spatial_graph/impl/: config.h  rtree.c  rtree.h
spatial_graph/impl/rtree/: config.h  rtree.c  rtree.h
spatial_graph/rtree/: __init__.py  line_rtree.py  rtree.py  src_wrapper.pyx  wrapper_template.pyx
spatial_graph/rtree/src/: config.h  rtree.c  rtree.h
src/spatial_graph/: __init__.py  _dtypes.py  _spatial_graph.py  _util.py  spatial_graph.py
src/spatial_graph/_graph/: __init__.py  graph.py  graph_base.py  spatial_graph.py  views.py
src/spatial_graph/_rtree/: line_rtree.py  rtree.py  wrapper_template.cpp  wrapper_template.pyx
src/spatial_graph/_rtree/src/: rtree.c  rtree.h
src/spatial_graph/graph/: cgraph.pyi  graph.py  wrapper_template.pyx
src/spatial_graph/graph/src/: LICENSE.txt
src/spatial_graph/rtree/: __init__.py  line_rtree.py  rtree.py  wrapper_template.pyx
src/spatial_graph/rtree/src/: ARCHITECTURE.md  config.h  rtree.h
tests/: test_attributes.py  test_bench.py  test_dtype.py  test_graph.py  test_invalid_inputs.py  test_rtree.py  test_spatial_graph.py
