[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spatial-graph"
version = "0.0.1"
description = "A spatial graph datastructure for python."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { email = "funkej@janelia.hhmi.org", name = "Jan Funke" },
  { email = "talley.lambert@gmail.com", name = "Talley Lambert" },
]
dependencies = ["witty>=v0.2.0", "CT3", "numpy", "setuptools>=75.8.0"]

[project.urls]
homepage = "https://github.com/funkelab/spatial_graph"
repository = "https://github.com/funkelab/spatial_graph"

[project.optional-dependencies]
dev = ["pytest>=8.3.4", "ruff", "mypy", "pre-commit"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
  "E",   # style errors
  "F",   # flakes
  "W",   # warnings
  "I",   # isort
  "UP",  # pyupgrade
  "TC",  # typing
  "TID", # tidy imports
  "RUF", # ruff
]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
files = "*.py"
strict = false
disallow_any_generics = false
disallow_subclassing_any = false
show_error_codes = true
pretty = true
